# Generalized-GPU-Command-Queues

./: .gitignore  CMakeLists.txt  config-build-test.sh  config-build.sh  readme.md
CuCuBLAS/: backend_class_wrappers.cu  backend_data_wrappers.cu  backend_lib_wrappers.cu  backend_routine_wrappers.cu  backend_util_wrappers.cu  backend_wrappers.hpp
HIP/CuCuBLAS/: backend_class_wrappers.cpp  backend_data_wrappers.cpp  backend_lib_wrappers.cpp  backend_routine_wrappers.cpp  backend_util_wrappers.cpp  backend_wrappers.hpp
HIP/hip_backend/: backend_class_wrappers.cpp  backend_data_wrappers.cpp  backend_lib_wrappers.cpp  backend_routine_wrappers.cpp  backend_util_wrappers.cpp  backend_wrappers.hpp
HIP/src/: data_management.cpp  general_utils.cpp
PARALiA/: CMakeLists.txt  config_silver1.sh
PARALiA/Benchmarking/: CMakeLists.txt  Targeted_performance_evaluation.in
PARALiA/Benchmarking/CuCuBLAS/src/BLASX/: BLASXWrappers.cpp
PARALiA/Benchmarking/HIP/src/BLASX/: BLASxEx_dgemm_runner.cpp  BLASx_dgemm_runner.cpp
PARALiA/Benchmarking/HIP/src/Component_testers/: testFasTransfer.cpp  testLinkOverlap.cpp
PARALiA/Benchmarking/HIP/src/PARALia/: dgemm_predictor.cpp  dgemm_runner.cpp  dgemm_runner_hetero.cpp  dgemm_runner_hip.cpp  dgemv_runner.cpp
PARALiA/Benchmarking/HIP/src/XKBLAS/: XKBLAS_dgemm_runner.cpp
PARALiA/Benchmarking/HIP/src/cuBLASXt/: cuBLASWrappers.cpp  cuBLASXtWrappers.cpp  cuBLASXt_dgemm_runner.cpp
PARALiA/Database_builder/: CMakeLists.txt
PARALiA/Database_builder/HIP/include/: microbenchmarks.hpp
PARALiA/Database_builder/HIP/nvidia-energy-measure/include/: nvem.hpp
PARALiA/Database_builder/HIP/nvidia-energy-measure/src/: nvem.cpp
PARALiA/Database_builder/HIP/src/: daxpy_microbench.cpp  ddot_microbench.cpp  dgemm_microbench.cpp  dgemv_microbench.cpp  sgemm_microbench.cpp
PARALiA/Library_scheduler/HIP/: Decom_backend.cpp
PARALiA/Library_scheduler/Software_caching/src/: DataCaching.cpp
PARALiA/Library_scheduler/src/: Subkernel.cpp
PARALiA/Library_scheduler/src/Functions/: dgemm.cpp
PARALiA/Universal_helpers/: CMakeLists.txt
Pthreads/: README.md  backend_class_wrappers.cpp  backend_class_wrappers.cu  backend_data_wrappers.cpp  backend_data_wrappers.cu  backend_lib_wrappers.cpp  backend_lib_wrappers.cu  backend_routine_wrappers.cpp  backend_routine_wrappers.cu  backend_util_wrappers.cpp  backend_util_wrappers.cu  backend_wrappers.hpp  class_wrappers.cpp  pthreads_backend_wrappers.hpp  queues_per_device.cu  queues_per_device.hpp
include/: unihelpers.hpp
src/: data_management.cpp  general_utils.cpp
testing/: CMakeLists.txt  interDeviceDependencies.cpp  matrixAdd.cpp  multiDevMarixMul.cpp  partial2Dcopies.cpp  simpleInterDevice.cpp  singleQueueDaxpy.cpp  singleQueueDaxpy.cu  singleQueueDgemm.cpp  threeQueuesDaxpy.cpp  threeQueuesDgemm.cpp
testing_pthreads/: CMakeLists.txt  interDeviceDependencies.cpp  matrixAdd.cpp  matrixMultInMultipleQueues.cpp  memcpy2DAsync.cpp  multiDevMarixMul.cpp  orderSingleQueue.cpp  parallelQueues.cpp  simpleInterDevice.cpp  singleQueueDaxpy.cpp  singleQueueDgemm.cpp  singleQueueTasks.cpp  threeQueuesDaxpy.cpp  threeQueuesDgemm.cpp  twoQueuesEvents.cpp  wrappedMatrixMultQueues.cpp
